# tolstoy_calendar

./: .example.env  .gitignore  Procfile  celerybeat-schedule  db.sqlite3  dump.rdb  manage.py  pyproject.toml  requirements.txt
data/: tolstoy-calendar.csv
newsletter/: forms.py  models.py  tasks.py  urls.py  utilities.py  utils.py  views.py
newsletter/migrations/: 0001_initial.py
scrape/: scrape-test.ipynb  scraper.py  working_with_time.py
scrape-test/: scrape.ipynb  scraper.py
scrape/.ipynb_checkpoints/: scrape-test-checkpoint.ipynb
support/data/: months.py
support/scrape/: model_design.txt  more_testing.ipynb  scrape-test.ipynb  test.json  tolstoy-calendar-no-author.csv  tolstoy-calendar-test.json  tolstoy-calendar.csv
templates/newsletter/: template_index.html  template_index_email.html
templates/newsletter/emails/: confirm_subscription.html  daily_email.html
tolstoy_calendar/: .env  asgi.py  celery.py  settings.py  urls.py  wsgi.py
tolstoy_calendar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
