[tool.poetry]
name = "tolstoy_calendar"
version = "0.1.0"
description = ""
authors = ["Rasul Kireev <me@rasulkireev.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
django-environ = "^0.4.5"
django-sendgrid-v5 = "^0.8.1"
tweepy = "^3.8.0"
redis = "^3.5.2"
celery = "^4.4.2"
pandas = "^1.0.4"
gunicorn = "^20.0.4"
sendgrid = "^6.3.1"
sentry_sdk = "^0.14.4"
django_celery_results = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
